[gd_scene load_steps=3 format=3 uid="uid://dfcwd655xoc4m"]

[ext_resource type="PackedScene" uid="uid://disr6a5q2uexd" path="res://bg.tscn" id="1_vp4vi"]
[ext_resource type="Script" path="res://UI/add_scene.gd" id="1_y3uc6"]

[node name="addScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3uc6")

[node name="Bg" parent="." instance=ExtResource("1_vp4vi")]
layout_mode = 0

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_right = 164.0
offset_bottom = 49.0
text = "BACK"

[node name="habit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.0
offset_top = -405.0
offset_right = 118.0
offset_bottom = -342.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "enter new habit catagory"

[node name="tipe" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -278.0
offset_right = 121.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "enter new type category"

[node name="addH" type="Button" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 48.0
offset_right = 552.0
offset_bottom = 99.0
text = "ADD"

[node name="showH" type="Button" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 104.0
offset_right = 550.0
offset_bottom = 148.0
text = "SHOW"

[node name="add2T" type="Button" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 180.0
offset_right = 552.0
offset_bottom = 231.0
text = "ADD"

[node name="showT" type="Button" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 238.0
offset_right = 550.0
offset_bottom = 282.0
text = "SHOW"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 310.0
offset_right = 597.0
offset_bottom = 917.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="addH" to="." method="_on_add_h_button_down"]
[connection signal="button_down" from="showH" to="." method="_on_show_h_button_down"]
[connection signal="button_down" from="add2T" to="." method="_on_add_2t_button_down"]
[connection signal="button_down" from="showT" to="." method="_on_show_t_button_down"]
